<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory
        android:key="settings_appearance"
        android:title="@string/settings_appearance">
        <ListPreference
            android:key="settings_screen"
            android:title="@string/settings_screen" />
        <ListPreference
            android:key="settings_theme"
            android:title="@string/settings_theme" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:key="settings_general"
        android:title="@string/settings_general">
        <androidx.preference.SwitchPreference
            android:key="settings_hide"
            android:title="@string/settings_hide" />
        <androidx.preference.ListPreference
            android:key="settings_picture"
            android:title="@string/settings_picture" />
        <androidx.preference.ListPreference
            android:key="settings_default"
            android:title="@string/settings_default" />
        <androidx.preference.ListPreference
            android:key="settings_quality"
            android:title="@string/settings_quality" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:key="settings_misc"
        android:title="@string/settings_misc">
        <Preference
            android:key="settings_about"
            android:title="@string/settings_about" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>