<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary"
    tools:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_splash" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login.username"
            style="@style/Login.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login.username.edit"
                style="@style/Login.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:imeActionLabel=""
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@id/login.password.edit"
                tools:text="@string/default_user" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login.password"
            style="@style/Login.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="8dp"
            android:imeOptions="actionGo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login.username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login.password.edit"
                style="@style/Login.EditText"
                android:textColorHint="?android:textColorHintInverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:nextFocusDown="@id/login.password.edit"
                tools:text="@string/default_pass" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login.token"
            style="@style/Login.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login.username"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login.token.edit"
                style="@style/Login.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_token"
                android:imeOptions="actionGo"
                android:inputType="number"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login.error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorError"
            android:visibility="gone"
            tools:text="@string/login_error_network_credentials"
            tools:visibility="visible" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="36dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login.login"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/login_login"
                android:textAlignment="center"
                app:backgroundTint="?android:attr/colorAccent"
                app:cornerRadius="24dp" />

            <ProgressBar
                android:id="@+id/login.progress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:indeterminateTint="?android:attr/textColorPrimary"
                android:visibility="gone"
                tools:visibility="visible" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login.signUp"
            style="@style/AppTheme.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="36dp"
            android:padding="8dp"
            android:text="@string/login_signup"
            android:textAllCaps="false"
            android:textColor="?android:attr/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <ImageButton
            android:id="@+id/login.lttForum"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_color"
            android:backgroundTint="?android:attr/colorAccent"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_lttforum"
            android:tint="?android:attr/colorPrimary"
            tools:backgroundTint="@color/colorAccent"
            tools:tint="@color/colorPrimary" />

        <ImageButton
            android:id="@+id/login.discord"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_color"
            android:backgroundTint="?android:attr/colorAccent"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_discord"
            android:tint="?android:attr/colorPrimary"
            tools:backgroundTint="@color/colorAccent"
            tools:tint="@color/colorPrimary" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login.privacy"
        style="@style/AppTheme.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:padding="8dp"
        android:text="@string/login_privacy"
        android:textColor="?android:attr/colorAccent" />

</FrameLayout>